force-app/main/default/objects/MA_Competitor__c/MA_Competitor__c.object-meta.xml
<CustomObject>
    <description>To track Competitors At MA Level</description>
    <label>MA Competitor</label>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>MA Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MA Competitor</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>