force-app/main/default/objects/MA_Competitor__c/fields/ADMINONLYChangeAmongCompetitors__c.field-meta.xml
<CustomField>
    <fullName>ADMINONLYChangeAmongCompetitors__c</fullName>
    <label>ADMIN ONLY Change Among Competitors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>