force-app/main/default/objects/MA_Competitor__c/fields/ADMINONLYHeadtoHead__c.field-meta.xml
<CustomField>
    <fullName>ADMINONLYHeadtoHead__c</fullName>
    <label>ADMIN ONLY Head to Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>