force-app/main/default/objects/MA_Competitor__c/fields/CDSold__c.field-meta.xml
<CustomField>
    <fullName>CDSold__c</fullName>
    <formula>IF(Opportunity__r.Business_Line__c=&apos;Client Development&apos;, ADMINONLYHeadtoHead__c ,0)/1000*-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CD Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>