force-app/main/default/objects/MA_Competitor__c/fields/CMSold__c.field-meta.xml
<CustomField>
    <fullName>CMSold__c</fullName>
    <formula>IF(Opportunity__r.Business_Line__c=&apos;Client Management&apos; &amp;&amp; ADMINONLYHeadtoHead__c &lt;0 , ADMINONLYHeadtoHead__c ,0)/1000 * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM Sold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>