force-app/main/default/objects/MA_Competitor__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <label>Competitor Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Category__c</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MA Competitor</relationshipLabel>
    <relationshipName>MA_Competitor</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>