force-app/main/default/objects/MA_Competitor__c/fields/Competitor_Group__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitor Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>