force-app/main/default/objects/MA_Competitor__c/fields/MA_Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>MA_Opp_Id__c</fullName>
    <description>In Data loader or while connecting with Tableau, the MA Opp Id has three extra characters at the end.  I&apos;m trying to create a formula field where it&apos;s only the Opp id so I can do my joins correctly.  This probably won&apos;t work because formula fields are not available in Tableau/Data loader</description>
    <formula>Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MA Opp Id</label>
    <type>Text</type>
</CustomField>