force-app/main/default/objects/MA_Competitor__c/fields/MAMeritId__c.field-meta.xml
<CustomField>
    <fullName>MAMeritId__c</fullName>
    <formula>Opportunity__r.Merit_Row_Id__c</formula>
    <label>MA Merit Id</label>
    <type>Text</type>
</CustomField>