force-app/main/default/objects/MA_Competitor__c/fields/Merit_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Merit_Row_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used to hold the Merit Row ID for easier matching</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Merit Row Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>