force-app/main/default/objects/MA_Competitor__c/fields/NetChange__c.field-meta.xml
<CustomField>
    <fullName>NetChange__c</fullName>
    <formula>Number_of_Members_Awarded__c -  Number_of_Members_Held__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>