force-app/main/default/objects/MA_Competitor__c/fields/Number_of_Members_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Members_Awarded__c</fullName>
    <label>Number of Members Awarded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>