force-app/main/default/objects/MA_Competitor__c/fields/of_Members_Awarded__c.field-meta.xml
<CustomField>
    <fullName>of_Members_Awarded__c</fullName>
    <label>% of Members Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>