force-app/main/default/objects/MA_Competitor__c/fields/of_Members_Held__c.field-meta.xml
<CustomField>
    <fullName>of_Members_Held__c</fullName>
    <label>% of Members Held</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>