force-app/main/default/objects/MA_Competitor__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Membership Activity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MA Competitor</relationshipLabel>
    <relationshipName>MA_Competitor</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>