force-app/main/default/objects/MA_Competitor__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <formula>IF(Opportunity__r.Business_Line__c=&apos;Client Management&apos; &amp;&amp; Opportunity__r.Termed_Mbrs__c  &gt;0 , ADMINONLYHeadtoHead__c ,0)/1000 * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>