force-app/main/default/objects/MA_Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>Competitor_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Thomson Reuters Corporation 01/01/2026 RFP MeRxAccCiHi (unet)</value>
    </filters>
    <filters>
        <field>Competitor_Classification__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <label>All</label>
</ListView>