force-app/main/default/objects/MA_Competitor__c/listViews/Competitor_Exceptions.listView-meta.xml
<ListView>
    <fullName>Competitor_Exceptions</fullName>
    <columns>Competitor_Classification__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>NetChange__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_Classification__c</field>
        <operation>equals</operation>
        <value>Medical</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>Magellan Health,Inc. - 01/01/2024 - Med Federal UHC FI Population Migration</value>
    </filters>
    <label>Competitor Exceptions</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>