force-app/main/default/objects/MA_Competitor__c/listViews/Debbie_s_List.listView-meta.xml
<ListView>
    <fullName>Debbie_s_List</fullName>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Competitor_Classification__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>NetChange__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MA_Opp_Id__c</field>
        <operation>equals</operation>
        <value>006Pi00000cZO9e</value>
    </filters>
    <label>Debbie&apos;s List</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>