force-app/main/default/objects/MA_Competitor__c/listViews/Dental_Competitor_Exceptions.listView-meta.xml
<ListView>
    <fullName>Dental_Competitor_Exceptions</fullName>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Classification__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>NetChange__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MA_Opp_Id__c</field>
        <operation>equals</operation>
        <value>0068Z00001VviNs</value>
    </filters>
    <label>Dental Competitor Exceptions</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>