force-app/main/default/objects/MA_Competitor__c/listViews/Null_Competitor_Group_Exceptions.listView-meta.xml
<ListView>
    <fullName>Null_Competitor_Group_Exceptions</fullName>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>Competitor_Classification__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>NetChange__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_Group__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Competitor_Account__c</field>
        <operation>notEqual</operation>
        <value>Total</value>
    </filters>
    <label>Null Competitor Group Exceptions</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>