force-app/main/default/objects/MA_Competitor__c/listViews/Vision_Competitor_Exceptions.listView-meta.xml
<ListView>
    <fullName>Vision_Competitor_Exceptions</fullName>
    <columns>Opportunity__c</columns>
    <columns>Competitor_Account__c</columns>
    <columns>Number_of_Members_Held__c</columns>
    <columns>ADMINONLYHeadtoHead__c</columns>
    <columns>ADMINONLYChangeAmongCompetitors__c</columns>
    <columns>Number_of_Members_Awarded__c</columns>
    <columns>NetChange__c</columns>
    <columns>Competitor_Group__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_Classification__c</field>
        <operation>equals</operation>
        <value>Vision</value>
    </filters>
    <filters>
        <field>MA_Opp_Id__c</field>
        <operation>equals</operation>
        <value>0064o00000YTwIM</value>
    </filters>
    <label>Vision Competitor Exceptions</label>
    <sharedTo>
        <role>CRMAdministrator</role>
    </sharedTo>
</ListView>